--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,8 @@
+
+@import "primeng/resources/primeng.css";
+@import "primeicons/primeicons.css";
 /* You can add global styles to this file, and also import other style files */
+html, body {
+  height: 100%;
+  margin: 0;
+}
